--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 set (Boost_USE_STATIC_LIBS OFF)
 find_package (Boost REQUIRED COMPONENTS unit_test_framework system filesystem date_time)
-include_directories (${Boost_INCLUDE_DIRS})
+find_package(Curses REQUIRED)
+include_directories (${Boost_INCLUDE_DIRS} ${CURSES_INCLUDE_DIR})
 
 include_directories(.)
-add_executable(Snake main.cpp Snake.cpp)
-target_link_libraries(Snake ${Boost_LIBRARIES})
+add_executable(Snake main.cpp Snake.cpp sWindow.cpp)
+target_link_libraries(Snake ${Boost_LIBRARIES} ${CURSES_LIBRARIES})
 add_subdirectory(test)
